@@ -18,25 +18,25 @@ part of the main cohort study), and (3) those living in larger
 households (that is, not just with their spouse).
 }
 \format{
-This data frame contains the following columns:
-\tabular{rl}{
-\code{id}: \tab subject identifier, a numeric vector \cr
-\code{couple}: \tab couple identifier, a numeric vector \cr
-\code{dob}: \tab date of birth, a date \cr
-\code{doe}: \tab date of entry into follow-up study, a date \cr
-\code{dox}: \tab date of exit from follow-up study, a date \cr
-\code{dosp}: \tab date of death of spouse, a date (if the spouse was still alive
-                  at the end of follow-up, this was coded to January 1, 2000) \cr 
-\code{fail}: \tab status at end of follow-up,
-                  a numeric vector (0=alive,1=dead) \cr
-\code{group}: \tab see Description, a numeric vector \cr
-\code{disab}: \tab disability score, a numeric vector \cr
-\code{health}: \tab perceived health status score, a numeric vector \cr
-\code{sex}: \tab a factor with levels
-                 \code{Male} 
-                 \code{Female}
-}
-}
+  This data frame contains the following columns:
+\describe{  
+\item{\code{id}}{subject identifier, a numeric vector}
+\item{\code{couple}}{couple identifier, a numeric vector}
+\item{\code{dob}}{date of birth, a date}
+\item{\code{doe}}{date of entry into follow-up study, a date}
+\item{\code{dox}}{date of exit from follow-up study, a date}
+\item{\code{dosp}}{date of death of spouse, a date (if the spouse was still alive
+                  at the end of follow-up,this was coded to January 1, 2000)}
+\item{\code{fail}}{status at end of follow-up,
+                  a numeric vector (0=alive,1=dead)}
+\item{\code{group}}{see Description, a numeric vector}
+\item{\code{disab}}{disability score, a numeric vector}
+\item{\code{health}}{perceived health status score, a numeric vector}
+\item{\code{sex}}{a factor with levels
+                 \code{Male} and
+                 \code{Female} }
+	     }
+ }
 \source{
 Jagger C, and Sutton CJ, Death after Marital Bereavement. Statistics in
 Medicine, 10:395-404, 1991. (Data supplied by Carol Jagger).
