@@ -154,7 +154,7 @@ the calculation of the axis ranges.
 }
 \author{
   Bendix Carstensen, Steno Diabetes Center,
-  \url{http://www.pubhealth.ku.dk/~bxc/}
+  \url{http://BendixCarstensen.com}
 }
 \seealso{
   \code{\link{apc.frame}}
